@@ -148,6 +148,48 @@ public class RegistryService {
         return RapidPass.buildFrom(accessPass);
     }
 
+    public static class ControlCodeGenerator {
+        /**
+         * Generates a control code.
+         *
+         * @param originalInput This is a unique pass phrase which can be configured using @value. See
+         * {@link RegistryService}.
+         * @param id The id of the access pass being generated. This should be unique, so make sure you create the
+         * {@link AccessPass} first, then retrieve its ID, then use that as a parameter for generating the control
+         *           code of the AccessPass.
+         * @return A control code in string format.
+         */
+        public static String generate(String originalInput, int id) {
+            byte[] encryptionKey = DatatypeConverter.parseBase64Binary(originalInput);
+            long obfuscatedId = Skip32.encrypt(id, encryptionKey);
+            int checkdigit = Damm32.compute(obfuscatedId);
+            return CrockfordBase32.encode(obfuscatedId,7) + CrockfordBase32.encode(checkdigit);
+        }
+    }
+
+    public List<RapidPass> findAllRapidPasses(Optional<Pageable> pageView) {
+        return this.findAllAccessPasses(pageView)
+                .stream()
+                .map(RapidPass::buildFrom)
+                .collect(Collectors.toList());
+    }
+
+    public Iterable<ControlCode> getControlCodes() {
+        return accessPassRepository
+                .findAll()
+                .stream()
+                .map(ControlCode::buildFrom)
+                .collect(Collectors.toList());
+    }
+
+    private List<AccessPass> findAllAccessPasses(Optional<Pageable> pageView) {
+        if (pageView.isPresent()) {
+            return accessPassRepository.findAll(pageView.get()).toList();
+        } else {
+            return accessPassRepository.findAll();
+        }
+    }
+
     /**
      * Helper function to retrieve an {@link AccessPass} by referenceId.
      * <p>
@@ -447,11 +489,18 @@ public class RegistryService {
     /**
      * Retrieve Scanner Devices
      */
-    public List<ScannerDevice> getScannerDevices(Optional<Pageable> pageView) {
+    public List<MobileDevice> getScannerDevices(Optional<Pageable> pageView) {
+        List<ScannerDevice> scannerDevices;
         if (pageView.isPresent()) {
-            return scannerDeviceRepository.findAll(pageView.get()).toList();
+            return scannerDeviceRepository.findAll(pageView.get()).toList()
+                    .stream()
+                    .map(MobileDevice::buildFro)
+                    .collect(Collectors.toList());
         } else {
-            return scannerDeviceRepository.findAll();
+            return scannerDeviceRepository.findAll()
+                    .stream()
+                    .map(MobileDevice::buildFro)
+                    .collect(Collectors.toList());
         }
     }
 }
